Flowmini/flowmini_v24_explicit_ast/examples/fail/bad_type_unknown_base.flow
program bad_type_unknown_base

type Thing refines UnknownBase {
}

main {
    x : int(1)
    print x
}
